# TensorFlowLite

TFLite_Check/: CMakeLists.txt  TestLoadTF.cpp  _old_main.cpp
TFLite_Check/src/: main.cpp
